0.24.2
======
- Fixed #23: Support other dateformat that german dateformat. If
  browserlanguage is not german that the datepicker will use ISO8601
  dateformat.

0.24.1
======
Bugfixrelease

- Fixed behaviour of not readonly conditionals visibilty if Rule evaluate to False on
  initial loading of the form.

0.24.0
======
Maintenance release. Code cleanup

- Improved expression parsing for list filtering
- Improved serialisation/deserialisation of multiselction fields (e.g
  checkboxescheckboxes)
- Fixed error in deserialisation of initial field values.

0.23.0
======
- Added 'showrawvalue' config option for inforenderer. See documentation for
  more details.
- Added sort configuration for selection fields. See documentation for more
  details.

0.22.0
======
Bugfix release
- Fixed bug with reset values. Resetting was to aggressive and deleted values
  even if reset was not set to true in conditionals which could cause
  dataloss.
- Fixed handling relations wich realtions are used with comma separated names
  as it is used when using form inheritance.

0.21.0
======
- #3 Add "Save an continue" Button. For forms with multiple pages formbar now
  renders a Save and continue submit button. An application can exime the
  request if the user has clicked this button to set active the next page on
  rendering.
- Add support for HTML code in help blocks.
- Added support to define validators directly in the form config.

0.20.3
======
- Allow user defined values on form initialisation. Needed for specific rules
  evaluations which relay on external data.
- Added "ignore" attribute to buttons to allow rendering forms with no
  buttons at all.

0.20.2
======
Bugfixes.

0.20.1
======
Bugfixes.

0.20.0
======
Large rewrite of the Javascript part and large parts of formbar to make
formbar more dynamic in case of showing messages on errors and warnings.

0.18.3
======
- Fixed selection filtering with user provided values.

0.18.2
======
- Fixed error on evaluating checkboxes.
